# BENG207_Echo_Chamber

./: BENG207_2_Gorkov_Explanation.md  BENG207_2_Gorkov_Explanation_2.md  README.md  meson.build  org.gnome.Example.json
PLOT_CSV/: echo_fig1_pressure_field.csv  echo_fig2_constant.csv  echo_fig3_resonance_spacing.csv  echo_fig4_sw_ratio_profile.csv  echo_fig5_coupling_layer.csv  echo_fig6_coupling_vs_freq.csv  echo_fig7_design_space.csv  fig10_dual_amplitude_sweep.csv  fig11_dual_nodal_uniformity.csv  fig12_pdms_transmission.csv  fig13_pdms_contrast.csv  fig14_pdms_attenuation_sensitivity.csv  fig14_plot.gp  fig15_glass_confinement.csv  fig16_pdms_vs_frequency.csv  fig1_pressure_field.csv  fig2_contrast_map.csv  fig3_mode_structure.csv  fig4_nodal_uniformity.csv  fig5_coupling_layer.csv  fig6_freq_sensitivity.csv  fig7_design_space.csv  fig8_dual_pressure_field.csv  fig9_dual_phase_sweep.csv  plot_fig14.sh  plot_fig15.sh
data/: org.gnome.Example.desktop.in  org.gnome.Example.gschema.xml  org.gnome.Example.metainfo.xml.in  org.gnome.Example.service.in
po/: POTFILES.in  meson.build
src/: beng207_2-application.c  beng207_2-application.h  beng207_2-window.c  beng207_2-window.h  beng207_2-window.ui  beng207_2.gresource.xml  main.c  meson.build
